# protostar-cairo-py

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml
cairo_python_bindings/: cairo_python_bindings-1.0.0a2-cp39-cp39-macosx_11_0_arm64.whl
protostar_cairo_py/: __init__.py
scripts/: deploy.py
src/: protostar_cairo_interface.py
